--- a/misael_mercado/week_01/day_05/Homework_day_5/index.html
+++ b/misael_mercado/week_01/day_05/Homework_day_5/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Geomtrey function lab</title>
     <script src="js/bank.js"></script>
+    <script src="js/creditCard.js"></script>
+    <script src="js/geometry.js"></script>
   </head>
   <body>
 <p>
