alternative methods from homework on JavaScript

--- a/misael_mercado/week_01/day_05/Homework_day_5/index.html
+++ b/misael_mercado/week_01/day_05/Homework_day_5/index.html
@@ -6,6 +6,7 @@
     <script src="js/bank.js"></script>
     <script src="js/creditCard.js"></script>
     <script src="js/geometry.js"></script>
+    <script src="js/bank2.js"></script>
   </head>
   <body>
 <p>
