--- a/sherine_foo/week_01/day_03/string/index.html
+++ b/sherine_foo/week_01/day_03/string/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"> // represent all language in the world, include °C
     <title>JS Homework Calculator</title>
     <script src="js/string.js"></script>
   </head>
