Donald Knuth website initial draft

--- a/soheil_tajahmadi/week_02/day_01/html-labs/busyhands/index.html
+++ b/soheil_tajahmadi/week_02/day_01/html-labs/busyhands/index.html
@@ -21,9 +21,13 @@
 
         <div id="container">
 
-        <div class="logosocial">
+        <div id="socialMedia">
           <img src="images/logo.png" alt="busy hands logo" id="logo">
-          <img src="images/socialnav.png" alt="social networks navigation buttons" id="socialnav">
+          <ul>
+            <li class="linkedIn" class=></li>
+
+
+          </ul>
         </div>
 
         <img src="images/photobanner.png" alt="photo banner" id=photobanner>
@@ -54,7 +58,7 @@
                 <p>aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
                 <a href="#">Read more...</a>
               </div>
-          </div>    
+          </div>
         <div>
       </main>
 
