commiting CS website and cat HW

--- a/shelley_zhang/week_02/day_01/html-labs/busyhands/index.html
+++ b/shelley_zhang/week_02/day_01/html-labs/busyhands/index.html
@@ -26,14 +26,16 @@
   </nav>
 </header>
 
-</div>
-
 <body>
-  <div class="topbox">
+  <!-- <div class="topbox"> -->
     <img src="images/logo.png" align="left" alt="logo"/>
 
+    <img class="socialmedia" src="images/socialNav.png"/>
 
-  <div class="bottombox"></div>
+
+    <img src="images/photobanner.png"/>
+
+  <!-- <div class="bottombox"></div> -->
 
 
 
@@ -53,4 +55,5 @@
 #copyright
 #companybottom -->
 
+</div>
 </html>
