--- a/tim_caldwell/week_02/day_03/catwalking/index.html
+++ b/tim_caldwell/week_02/day_03/catwalking/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <script src="js/main.js"></script>
+    <div class="container">
+      <div class="buttons">
+        <button id="bonus1" class="active">Bonus #1</button>
+        <button id="bonus2">Bonus #2</button>
+        <button id="bonus3">Bonus #3</button>
+        <button id="bonus4">Bonus #4</button>
+      </div>
+      <script src="js/main.js"></script>
+    </div>
   </body>
 </html>
