changes to famous CS website

--- a/shelley_zhang/week_02/day_02/famousdevelopers/compiler.html
+++ b/shelley_zhang/week_02/day_02/famousdevelopers/compiler.html
@@ -20,8 +20,9 @@
             <a href="compiler.html">Compilers</a>
         </nav>
       </header>
-      <h1>What the hell is a compiler?</h1>
-
+      <div class="typewriter">
+      <h1>WTF is a compiler?</h1>
+    </div>
         <p>
 
 A compiler is a special program that processes statements written in a particular programming language and turns them into machine language or "code" that a computer's processor uses.
@@ -29,7 +30,9 @@ A compiler is a special program that processes statements written in a particula
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OVTu4XcmnwE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
         </p>
-
+    <footer>
+    </p>&#169; Shelley Zhang</p>
+    </footer>
     </div>
   </body>
 
