--- a/shelley_zhang/week_02/day_02/famousdevelopers/index.html
+++ b/shelley_zhang/week_02/day_02/famousdevelopers/index.html
@@ -21,8 +21,9 @@
         </nav>
       </header>
 
+      <div class="typewriter">
       <h1>Frances E. Allen</h1>
-
+      </div>
       <main>
 
         <img src="images/francesallenmainimg.large.jpg" alt;"Frances is a boss">
@@ -34,7 +35,7 @@
 
       </main>
 
-
+<div class="flex">
       <div class="funfacts">
         <h3>Fun Facts</h3>
         <p>
@@ -54,5 +55,9 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22735.961828576597!2d-73.5516200479828!3d44.57666618176464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cca4491f5a90565%3A0x394baa1949c1550!2sPeru%2C+NY+12972%2C+USA!5e0!3m2!1sen!2sau!4v1529412089101" width="410" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </div>
+    <footer>
+      <p>&#169; Shelley Zhang</p>
+    </footer>
+  </div>
   </body>
 </html>
