--- a/tim_caldwell/week_02/day_03/catwalking/index.html
+++ b/tim_caldwell/week_02/day_03/catwalking/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/anim.js"></script>
   </head>
   <body>
     <div class="container">
