changes to CS website

--- a/shelley_zhang/week_02/day_02/famousdevelopers/about.html
+++ b/shelley_zhang/week_02/day_02/famousdevelopers/about.html
@@ -17,19 +17,31 @@
       <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="compiler.html">Compilers</a>
+            <a href="about.html">About</a>
         </nav>
       </header>
       <div class="typewriter">
-      <h1>WTF is a compiler?</h1>
+      <h1>Areas of Expertise</h1>
     </div>
+
+     <h2>WTF is a compiler?</h2>
         <p>
 
 A compiler is a special program that processes statements written in a particular programming language and turns them into machine language or "code" that a computer's processor uses.
 
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OVTu4XcmnwE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
         </p>
+
+<h2>WTF is parallel computing?</h2>
+
+<p>
+  Parallel computing is a type of computation in which many calculations or the execution of processes are carried out concurrently. Large problems can often be divided into smaller ones, which can then be solved at the same time each on their own processor or on a set of computers that have been networked together.
+</p>
+
+<img src="images/parallel.jpg" alt="parallel computers at IBM">
+
     <footer>
     </p>&#169; Shelley Zhang</p>
     </footer>
