--- a/shelley_zhang/week_02/day_02/famousdevelopers/index.html
+++ b/shelley_zhang/week_02/day_02/famousdevelopers/index.html
@@ -17,7 +17,7 @@
       <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="compiler.html">Compilers</a>
+            <a href="about.html">About</a>
         </nav>
       </header>
 
@@ -26,7 +26,7 @@
       </div>
       <main>
 
-        <img src="images/francesallenmainimg.large.jpg" alt;"Frances is a boss">
+        <img src="images/francesallenmainimg.large.jpg" alt="Frances is a boss">
         <img src="images/faphoto2.jpg" alt="Photo of Frances">
 
           <h2>Biography</h2>
