Completed cat walking exercise

--- a/luke_eaton/week_02/day_01/homework/html-labs/ecardly/index.html
+++ b/luke_eaton/week_02/day_01/homework/html-labs/ecardly/index.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="The best in ecards">
-    	<meta name="keywords" content="Ecards, comedy, gifts">
-		<title>Ecard.ly | The Best in Ecards</title>
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-	
-			
+
+<head>
+	<header>
 
 
-	</body>
+		<div class="box absolute">
+			this is an absolute Box
+			<img src="images/logo.png" alt="">
+		</div>
+
+	</header>
+
+	<meta charset="utf-8">
+	<meta name="description" content="The best in ecards">
+	<meta name="keywords" content="Ecards, comedy, gifts">
+	<title>Ecard.ly | The Best in Ecards</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+	<img src="images/background.jpg" alt="">
+	<img src="images/background.jpg" alt="">
+	<img src="images/background.jpg" alt="">
+	<img src="images/background.jpg" alt="">
+
+	<div id="container">
+		<!-- No Clearing div! -->
+		<div class="clearfix">
+			<div style="float: left;" class="clearfix">
+				<!--<h1 class="headerReplacement">Section Header</h1>-->
+
+
+
+				<h2>Ecard of the Day</h2>
+
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+					in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+
+			</div>
+
+</body>
+
 </html>
