--- a/soheil_tajahmadi/week_02/day_03/index.html
+++ b/soheil_tajahmadi/week_02/day_03/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <!-- <img src="./walking-cat.gif" alt="walking cat"> -->
     <img src="http://www.anniemation.com/clip_art/images/cat-walk.gif" alt="walking cat">
     <script type="text/javascript" src="js/main.js">
 
