--- a/robert_maculewicz/week_02/day_01/html-labs/busyhands/index.html
+++ b/robert_maculewicz/week_02/day_01/html-labs/busyhands/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE htm>
+<!DOCTYPE html>
 <html>
 <head>
   <meta chaset="utf-8">
@@ -23,10 +23,19 @@
 <div style='float:right'><img src="images/button_blurb.png"></div>
 </div>
 <div class="stylbox">
-<div>Home style1</div>  <div>Home style1</div>  <div>Home style1</div>
+  <ul>
+    <li>Home style 1</li>
+     <li>Home style 2</li>
+     <li>Home style 3<li>
+   </ul>
+<!--<div>Home style1</div>  <div>Home style1</div>  <div>Home style1</div> -->
 </div>
 <div class="box">
-  <img src="images/photo_column1.jpg" >
+  <div>
+      <p>Home Style 1</p>
+    <img src="images/photo_column1.jpg" >
+    
+  </div>
   <img src="images/photo_column2.jpg" >
   <img src="images/photo_column3.jpg" >
 </div>
