--- a/robert_maculewicz/week_02/day_02/Donald_Knuth/biography/index.html
+++ b/robert_maculewicz/week_02/day_02/Donald_Knuth/biography/index.html
@@ -11,9 +11,10 @@
 
       <header>
         <nav>
-          <a href="#">Home</a>
-          <a href="http://maps.google.com.au">Location</a>
-          <a href="#">Contact</a>
+          <a href="index.html">Home</a>
+          <a target="_blank" href="bio.html">Biography</a>
+        <!--  <a href="http://maps.google.com.au">Contact</a> -->
+          <a target="_blank" href="https://www-cs-faculty.stanford.edu/~knuth/email.html">Contact</a>
         </nav>
 
         <h1>Donald Knuth</h1>
@@ -36,7 +37,7 @@
       <aside>
         <h3>Facts</h3>
         <ul class="rob">
-          <li><a href="#">Early Life</a></li>
+          <li><a target="_blank" href="https://www-cs-faculty.stanford.edu/~knuth/books.html">Knuth's Books</a></li>
           <li><a href="#">Education</a></li>
           <li><a href="#">Early Work</a></li>
 
