doing pull upstream master thing

--- a/ej_willard/week_02/day_01/html-labs/busyhands/index.html
+++ b/ej_willard/week_02/day_01/html-labs/busyhands/index.html
@@ -70,7 +70,7 @@
           </div>
 <!-- end of center container with white background image-->
           <footer>
-            <div class='column1'>
+            <div class='box column1'>
               <h3>Blogroll</h3>
               <a href='#'>Documentation</a>
               <a href='#'>Plugins</a>
@@ -79,24 +79,22 @@
               <a href='#'>Themes</a>
               <a href='#'>WordPress Blog</a>
             </div>
-            <div class='column2'>
+            <div class='box column2'>
               <h3>Text Widget</h3>
               <p>Th’art nesh thee nay lad soft lad wacken thi sen up t’foot o’ our stairs. Nay lad where’s tha bin. Th’art nesh thee a pint ‘o mild any rooad t’foot o’ our stairs.Be reet where’s tha bin mardy bum mardy bum.</p>
             </div>
-            <div class='column3'>
+            <div class='box column3'>
               <h3>Meta Widget</h3>
               <a href='#'>Log in</a>
               <a href='#'>Entries RSS</a>
               <a href='#'>Comments RSS</a>
               <a href='https://wordpress.org/' target="_blank">WordPress.org</a>
             </div>
-            <p class='copyright'>© Copyright 2010 Busy Hands.</p>
-            <p class='credit'>Theme brought to you by <a href="#">Good Friends!</a>
           </footer>
+          <p class='copyright'>© Copyright 2010 Busy Hands.</p>
+          <p class='credit'>Theme brought to you by <a href="#">Good Friends!</a>
 
-
-
-    </div>
+    </div> <!--end of main container div-->
 
 </body>
 
