--- a/ej_willard/week_02/day_02/matsumoto/hometown.html
+++ b/ej_willard/week_02/day_02/matsumoto/hometown.html
@@ -15,8 +15,7 @@
   </nav>
   <div class='container'>
     <header>
-
-      <!-- <h1>まつもとゆきひろ</h1> -->
+      <h1>まつもとゆきひろ</h1>
       <i class="far fa-gem"></i>
 
 
@@ -26,7 +25,7 @@
       <h2>Hometown</h2>
       <p class='main'>Matsumoto was born in Osaka Prefecture, Japan, on 14 April 1965. At age four he moved to Tottori Prefecture.</p>
       <p class='main'>According to an interview conducted by Japan Inc., he was a self-taught programmer until the end of high school. He graduated with an information science degree from University of Tsukuba, where he was a member of Ikuo Nakata's research lab on programming languages and compilers.</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d835363.9917417057!2d134.30889242256634!3d35.128164907765516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x3555d742b08c4f07%3A0x3b2f410c40e092ee!2sTottori+Prefecture%2C+Japan!3m2!1d35.5038906!2d134.2377356!4m5!1s0x6000e86b2acc70d7%3A0xa399ff48811f596d!2sOsaka+Prefecture%2C+Japan!3m2!1d34.6862971!2d135.5196609!5e0!3m2!1sen!2sau!4v1529414060974" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d840137.0767999568!2d134.85753035283398!3d34.660120774374505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e86b2acc70d7%3A0xa399ff48811f596d!2sOsaka+Prefecture%2C+Japan!5e0!3m2!1sen!2sau!4v1529542419640" width="400" height="400" frameborder="10" style="border: 3px solid #CF4B35; border-radius: 1%" allowfullscreen></iframe>
     </main>
 
     <aside>
