--- a/ej_willard/week_02/day_02/matsumoto/index.html
+++ b/ej_willard/week_02/day_02/matsumoto/index.html
@@ -16,8 +16,10 @@
         <a href='hometown.html'>Hometown</a>
         <a href='other.html'>Sources and Media</a>
       </nav>
-      <h1>まつもとゆきひろ</h1>
+      <div id="headFade">
+        <h1>まつもとゆきひろ</h1>
       <i class="far fa-gem"></i>
+      </div> 
 
     </header>
     <main>
