--- a/ej_willard/week_02/day_05/ga-bank/atm.html
+++ b/ej_willard/week_02/day_05/ga-bank/atm.html
@@ -5,7 +5,9 @@
   <title>ATM</title>
   <link rel="stylesheet" href="css/atm.css">
   <script src="js/jquery.js"></script>
-  <script src="js/atm.js"></script>
+  <!-- <script src="js/joelsimpleATM.js"></script> this is the simple ATM all in one JS file-->
+    <script src="js/joels-seperate-accounts.js"></script> <!--this is two seperate folders one having simple accounts with no DOM -->
+    <script src="js/joels-seperate-ATM.js"></script><!--this is two seperate folders one having simple accounts with no DOM -->
 </head>
 <body>
 
