--- a/soheil_tajahmadi/week_07/day_01/index.html
+++ b/soheil_tajahmadi/week_07/day_01/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Document</title>
 </head>
 <body>
@@ -14,9 +15,6 @@
     </form>
   </div>
 
-  <div id="results">
-
-  </div>
 
 
 <!-- Scripts included at the end of document -->
