updates to SPA homework books

--- a/tim_caldwell/week_07/day_01/google_books_spa/index.html
+++ b/tim_caldwell/week_07/day_01/google_books_spa/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <h1>Book Search</h1>
-  <div class="form">
+  <form id="search">
     <label for="searchinput">Search:</label>
     <input type="text" id="searchinput">
-    <button type="submit" id="searchbutton">Search</button>
-  </div>
+    <button type="submit">Search</button>
+  </form>
   <div class="output" id="output">
 
 
