fixed appending html elements

--- a/misael_mercado/week_07/day_01/Ajax_GB/index.html
+++ b/misael_mercado/week_07/day_01/Ajax_GB/index.html
@@ -18,6 +18,7 @@
 
   <div class="button-container"><button id="search_button">Search</button></div>
   <p><img id="cover"></p>
+  <div id="info"></div>
 
   <script src="js/main.js"></script>
 </body>
