--- a/sherine_foo/week_07/day_03/AJAX-API/index.html
+++ b/sherine_foo/week_07/day_03/AJAX-API/index.html
@@ -18,14 +18,20 @@
     <div class = "container">
       <h1>EPIC BLUE MARBLE</h1>
 
-      <!-- <form id="search">
-        <input type="serach", id="query" required autofocus placeholder="planets">
-        <button>Search</button> -->
+      <div id="image" class= "thumbnail"></div>
 
-      <!-- </form> -->
+      <h1>EPIC BLUE MARBLE OF THE DAY</h1>
 
-      <div id="image"></div>
-    </div>
+      <form id="search">
+        <h4>Any day from 2015 to 2017</h4>
+        <input type="date", id="year" required autofocus >
+
+        <button>Search</button>
+
+      </form>
+
+
+      </div>
 
 </body>
 </html>
